# SnippingTool

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: dxgiMgr.cpp  dxgiMgr.hpp  main.cpp  snippingTool.cpp  snippingTool.hpp
